--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "dependencies": {
         "@tsconfig/node14": "^1.0.0",
         "commander": "^2.20.3",
+        "inquirer": "^8.1.0",
         "nearley": "^2.20.1",
         "typescript": "^4.3.2"
     },
     "devDependencies": {
+        "@types/inquirer": "^7.3.1",
         "@types/nearley": "^2.11.1",
         "@types/node": "^15.6.1"
     }
